# OS_HW1_Gil_Nir

./: CMakeLists.txt  Commands.cpp  Commands.h  Test  pid.txt  signals.cpp  smash  smash.cpp  submitters.txt  tryTest
temp/: test_touch_invalid_args_amount.out.processed
tests/inputs/: test_2020_timeout.txt
tests/outputs/: test_2020_jobs.err.processed  test_2020_jobs.out.processed  test_2020_kill.err.processed  test_2020_kill.out.processed  test_2020_redirect.err.processed  test_2020_redirect.out.processed  test_2020_timeout.err.processed  test_2020_timeout.out.processed  test_bg1.out.processed  test_bg2.err.processed  test_bg2.out.processed  test_bg5.err.processed  test_bg5.out.processed  test_cd.err.processed  test_cd2.err.processed  test_cd2.out.processed  test_cd3.err.processed  test_cd3.out.processed  test_cd_fail.out.processed  test_external1.err.processed  test_external1.out.processed  test_fg.out.processed  test_fg2.out.processed  test_fg3.out.processed  test_fg4.err.processed  test_fg4.out.processed  test_fg5.err.processed  test_fg5.out.processed  test_input1.out.processed  test_input_almog.out.processed  test_kill1.err.processed  test_kill1.out.processed  test_kill5.err.processed  test_kill5.out.processed  test_kill_jobs.err.processed  test_kill_jobs.out.processed  test_params1.err.processed  test_params1.out.processed  test_pipe2.out.processed  test_pipe4.err.processed  (+18 more)
